# Smart_Resume_Screener

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
resume_screener/: __init__.py
resume_screener/backend/: generate_summary.py  graph.py  main.py  process_jd.py  process_resume.py  skills.py  state.py
resume_screener/frontend/: app.py  run_app.py
