[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "resume_screener"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mithunraj" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["resume_screener"]
include = ["pyproject.toml", "resume_screener/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["resume_screener"]
force-sort-within-sections = true

